# edutap.apple_wallet_web_service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  docker-compose.debug.yaml  docker-compose.yaml  pyproject.toml  traefik.yaml
pgadmin/: servers.json
src/edutap/apple_wallet_web_service/: config.py  db_models.py  http_models.py  kafka_producer.py  notification_service.py  service.py  standalone.py
tests/: test_model.py
tests/data/: basic_pass.pkpass
tests/data/jsons/: boarding_pass.json  coupon.json  event_ticket.json  generic_pass.json  minimal_generic_pass.json  minimal_storecard.json  storecard_with_nfc.json
